# radiocore

./: .gitignore  Cargo.toml  LICENSE  README.md
config/: default.toml
config/scripts/: repeater.lua
crates/radiocore-core/: Cargo.toml
crates/radiocore-core/src/: config.rs  lib.rs
crates/radiocore-core/src/audio/: dsp.rs  mod.rs  pipeline.rs
crates/radiocore-core/src/serial/: mod.rs
crates/radiocore-core/src/web/: mod.rs
crates/radiocore-digimode/: Cargo.toml
crates/radiocore-digimode/src/: main.rs
crates/radiocore-digimode/static/: index.html
crates/radiocore-remote/: Cargo.toml
crates/radiocore-remote/src/: main.rs
crates/radiocore-remote/src/hamlib/: mod.rs
crates/radiocore-remote/static/: index.html
crates/radiocore-repeater/: Cargo.toml
crates/radiocore-repeater/src/: main.rs
crates/radiocore-repeater/src/logic/: dtmf.rs  mod.rs
crates/radiocore-repeater/src/tts/: mod.rs
crates/radiocore-repeater/static/: index.html
docs/: ARCHITECTURE.md  PRODUCT.md  SPEC.md  getting-started.md
firmware/: CMakeLists.txt
firmware/main/: CMakeLists.txt  es8388.c  es8388.h  main.c  ptt.c  ptt.h  usb_audio.c  usb_audio.h
hardware/: BREAKOUT.md  EASYEDA_GUIDE.md  HARDWARE.md  SCHEMATIC.md
hardware/bom/: BOM_RadioCore_v1.csv  COST_ESTIMATE.md  JLCPCB_BOM.csv
