[package]
name = "radiocore-core"
description = "Shared core library — audio pipeline, serial protocol, web server, DSP"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
cpal = { workspace = true }
ringbuf = { workspace = true }
tokio = { workspace = true }
axum = { workspace = true }
tower-http = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
serialport = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
