[package]
name = "radiocore-digimode"
description = "Digimode interface — USB Audio + CAT control for WSJT-X, fldigi, etc."
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "radiocore-digimode"
path = "src/main.rs"

[dependencies]
radiocore-core = { path = "../radiocore-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
