[package]
name = "radiocore-remote"
description = "Remote station server — Hamlib CAT, Opus audio, WebSocket control"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "radiocore-remote"
path = "src/main.rs"

[dependencies]
radiocore-core = { path = "../radiocore-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
