[package]
name = "radiocore-repeater"
description = "Repeater controller — Lua logic, DTMF, TTS, VoIP linking"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true

[[bin]]
name = "radiocore-repeater"
path = "src/main.rs"

[dependencies]
radiocore-core = { path = "../radiocore-core" }
tokio = { workspace = true }
axum = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
toml = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
anyhow = { workspace = true }
mlua = { version = "0.9", features = ["luajit", "send"] }
